--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -342,7 +342,7 @@ Combining the linear--in--$\bm k$ terms found in the previous sections, we arriv
 	H_R^{\bm k} = e \bm{E}_P\cdot \left[c_1(\bm k \times \bm \sigma) + c_2 (\bm k \times \bm{L}^{\bm 0} ) \right],
 \end{equation}
 where $\bm{E}_P$ denotes the internal electric field from the polarization.
-$c_1$ is a result of the atomic SOC driven unquenching at $\bm k = \bm 0$, and the combined effect of the relativistic term in Eq.~\eqref{eq:Rashba_purerel} and the overlap dipoles leading to Eq.~\eqref{eq:Rashba_from_OAM} results in $c_2$.
+$c_1$ is a result of the combined effect of the relativistic term in Eq.~\eqref{eq:Rashba_purerel} and the overlap dipoles leading to Eq.~\eqref{eq:Rashba_from_OAM}, and the atomic SOC driven unquenching at $\bm k = \bm 0$ results in the term with $c_2$ (see Eq.~\eqref{eq:d_z_from_OAM}).
 \\\\
 To reiterate, the first mechanism is an electrostatically driven linear unquenching of the OAM which in turn couples to the spin through the atomic SOC, leading to the linear spin splitting.
 The second effect is a linear $\bm k$ variation of the dipoles of the Bloch functions with unquenched OAM at T-invariant points of the BZ, due to atomic SOC. Both together then result in the two terms on the right-hand side of Eq.~\eqref{eq:Rashba_hami}. 
