--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -182,8 +182,8 @@ This brings me, finally, to my Mother and Father, whom I can not thank enough fo
 \mainmatter
 % \Include{Introduction}
 
-\Include{Rashba}
-% \Include{GdMn2O5}
+% \Include{Rashba}
+\Include{GdMn2O5}
 % \Include{Cr}
 
 % \Include{Softening}
